# modbus-rs

./: Cargo.toml  README.md
docs/: slave_id_analysis.md  slave_id_summary.md
examples/: multi_slave_client_test.rs  multi_slave_tcp_server.rs  rtu_client.rs  rtu_over_tcp_client.rs  rtu_over_tcp_server.rs  rtu_server.rs  slave_id_comparison.rs  tcp_client.rs  tcp_server.rs
src/: lib.rs  main.rs
src/client/: mod.rs  modbus_rtu_client.rs  modbus_rtu_over_tcp_client.rs  modbus_rtu_over_tcp_client_flexible.rs  modbus_tcp_client.rs
src/protocol/: mod.rs  modbus_rtu.rs  modbus_rtu_over_tcp.rs  modbus_tcp.rs  readme.md
src/server/: mod.rs  modbus_multi_slave_rtu_over_tcp_server.rs  modbus_multi_slave_rtu_server.rs  modbus_multi_slave_tcp_server.rs  modbus_rtu_over_tcp_server.rs  modbus_rtu_server.rs  modbus_tcp_server.rs
src/utils/: data.rs
