[package]
name = "modbus-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Pure Rust implementation of Modbus protocol"
license = "BSD-2-Clause"
repository = "https://github.com/your-username/modbus-rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-serial = "5.0"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "tcp_client"
path = "examples/tcp_client.rs"

[[example]]
name = "rtu_client"
path = "examples/rtu_client.rs"

[[example]]
name = "tcp_server"
path = "examples/tcp_server.rs"

[[example]]
name = "rtu_over_tcp_client"
path = "examples/rtu_over_tcp_client.rs"

[[example]]
name = "slave_id_comparison"
path = "examples/slave_id_comparison.rs"
